fix: overflow of reviewtext in create review

--- a/client/src/pages/CreateReview/CreateReview.module.css
+++ b/client/src/pages/CreateReview/CreateReview.module.css
@@ -50,6 +50,7 @@
     flex-direction: column;
     flex: 1;
     gap: 10px;
+    max-height: 100%;
 }
 
 .reviewTitle, .reviewText {
